cmake_minimum_required(VERSION 2.6)
Project ( siggame )
Find_Package( SDL REQUIRED )
Find_Package( OpenGL REQUIRED )
link_libraries ( ${SDL_LIBRARY} )
link_libraries ( ${OPENGL_LIBRARY} )
INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
add_executable ( siggame WIN32 MACOSX_BUNDLE main.cpp Actor.cpp  BoxActor.cpp Quad.cpp  Renderer.cpp  World.cpp)
